# Python-migrations-tst

./: .coverage  .gitignore  .readthedocs.yaml  gunicorn_config.py  oc-lettings-site.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
docker/: docker-compose.yml  dockerfile
docs/: requirements.txt
docs/source/: conf.py  deployment.rst  getting_started.rst  index.rst  launch.rst
lettings/: admin.py  models.py  tests.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_alter_address_table_alter_letting_table.py  0002_transfer_adress_letting_data.py
lettings/templates/lettings/: index.html  letting.html
oc_lettings_site/: settings.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_remove_letting_address_delete_address_delete_letting.py  0002_remove_letting_address_remove_profile_user_and_more.py  0003_delete_profile.py
profiles/: admin.py  models.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_profile_user_alter_profile_table.py  0002_transfer_profile_data.py
profiles/templates/profiles/: 404.html
static/css/: styles.css
templates/: base.html  home.html
templates/errors/: 404.html  500.html
